# llm-spelling-check

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.cpu.yaml  compose.gpu.yaml  compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
data/: README.md  fiona_wrong_results_Training.sgml  sample_sentences.json
docs/: api.md
docs/v0.1.0/: sample-data-flow-analysis-2026-05-29.md  sample-data-flow-analysis-google-gemma-3-1b-pt-2026-05-29.md  sample-data-flow-analysis-google-gemma-3-4b-it-2026-05-29.md  sample-data-flow-analysis-google-gemma-3-4b-pt-2026-05-29.md  sample-data-flow-analysis-google-gemma-4-e2b-2026-05-29.md  sample-data-flow-analysis-redhat-gemma-4-26b-a4b-it-nvfp4-2026-05-29.md  summary.md
docs/v0.2.0/: google-gemma-3-1b-pt.md  google-gemma-3-4b-pt.md  google-gemma-4-e2b.md  google-gemma-4-e4b.md  summary.md
docs/v0.2.1/: google-gemma-3-1b-pt.md  google-gemma-3-4b-pt.md  google-gemma-4-e2b.md  google-gemma-4-e4b.md  summary.md
docs/v0.2.2/: gemma-4-26b-a4b-window12-calls.jsonl  gemma-4-26b-a4b-window12-no-fim-calls.jsonl  gemma-4-26b-a4b-window12-no-fim.md  gemma-4-26b-a4b-window12.md  google-gemma-3-1b-pt-window12-calls.jsonl  google-gemma-3-1b-pt-window12.md  google-gemma-3-4b-pt-window12-calls.jsonl  google-gemma-3-4b-pt-window12.md  google-gemma-3-4b-pt-window24-calls.jsonl  google-gemma-3-4b-pt-window24.md  google-gemma-4-e2b-window12-calls.jsonl  google-gemma-4-e2b-window12.md  google-gemma-4-e2b-window24-calls.jsonl  google-gemma-4-e2b-window24.md  google-gemma-4-e4b-window12-calls.jsonl  google-gemma-4-e4b-window12.md  google-gemma-4-e4b-window24-calls.jsonl  google-gemma-4-e4b-window24.md  summary.md
docs/v0.2.3/: gemma-4-26b-a4b-window12-calls.jsonl  gemma-4-26b-a4b-window12.md  google-gemma-3-270m-window12-calls.jsonl  google-gemma-3-270m-window12.md  summary.md
docs/v0.2.4/: gemma-4-26b-a4b-sgml-calls.jsonl  gemma-4-26b-a4b-sgml-results.json  google-gemma-3-270m-sgml-calls.jsonl  google-gemma-3-270m-sgml-results.json  summary.md
docs/v0.2.6/: summary.md
src/core/: config.py
src/spelling_check/: __init__.py  alignment.py  candidates.py  cli.py  client.py  dataset.py  decision.py  evaluation.py  fim_candidates.py  models.py  pipeline.py  risk.py  service.py  settings.py  text.py  web.py
src/spelling_check/static/: app.js  index.html  styles.css
tests/: fakes.py  test_cli.py  test_client.py  test_dataset.py  test_evaluation.py  test_pipeline.py  test_service.py  test_web.py
tests/fixtures/: sample_sentences.sgml
